# TrackAI-Human-Detector-And-Tracker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: run-unit-test-and-upload-codecov.yml
Results/: cpplint.txt  output.avi  output_.avi  output_fff.avi  valgrind.txt
app/: CMakeLists.txt  detector.cpp  main.cpp  robot.cpp  tracker.cpp  visualizer.cpp
docs/html/: annotated.html  classTrackAI_1_1Detector-members.html  classTrackAI_1_1Detector.html  classTrackAI_1_1Detector__coll__graph.map  classTrackAI_1_1Detector__coll__graph.md5  classTrackAI_1_1Robot-members.html  classTrackAI_1_1Robot.html  classTrackAI_1_1Robot__coll__graph.map  classTrackAI_1_1Robot__coll__graph.md5  classTrackAI_1_1Robot_a70f18b70b2d0fa895c62a5906a3ef7a5_icgraph.map  classTrackAI_1_1Robot_a70f18b70b2d0fa895c62a5906a3ef7a5_icgraph.md5  classTrackAI_1_1Robot_af611249a3709a66b9fbe59a37bca313b_cgraph.map  classTrackAI_1_1Robot_af611249a3709a66b9fbe59a37bca313b_cgraph.md5  classTrackAI_1_1Tracker-members.html  classTrackAI_1_1Tracker.html  classTrackAI_1_1Tracker__coll__graph.map  classTrackAI_1_1Tracker__coll__graph.md5  classTrackAI_1_1Tracker_a9000c5db2225d70d904f1c18d60030ab_icgraph.map  classTrackAI_1_1Tracker_a9000c5db2225d70d904f1c18d60030ab_icgraph.md5  classTrackAI_1_1Visualizer-members.html  classTrackAI_1_1Visualizer.html  classTrackAI_1_1Visualizer__coll__graph.map  classTrackAI_1_1Visualizer__coll__graph.md5  classes.html  detector_8cpp.html  detector_8cpp__incl.map  detector_8cpp__incl.md5  detector_8hpp.html  detector_8hpp__dep__incl.map  detector_8hpp__dep__incl.md5  detector_8hpp__incl.map  detector_8hpp__incl.md5  detector_8hpp_source.html  dir_000000_000001.html  dir_d422163b96683743ed3963d4aac17747.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  (+39 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  files_0.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  (+13 more)
include/: detector.hpp  robot.hpp  tracker.hpp  visualizer.hpp
scripts/: install_dependencies.sh
test/: CMakeLists.txt  main.cpp  test.cpp
